# hiep_ros2

./: README.md  frames_2025-05-27_23.39.30.gv  frames_2025-05-29_01.21.58.gv  frames_2025-06-04_23.06.32.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hiep_robot2/lib/hiep_robot2/: odometry_publisher
install/hiep_robot2/share/hiep_robot2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hiep_robot2/share/hiep_robot2/config/: rviz_config.rviz
install/hiep_robot2/share/hiep_robot2/launch/: lidar_launch.py  mapping_launch.py  serial_comm_launch.py
install/hiep_robot2/share/hiep_robot2/rviz/: mapping.rviz
install/hiep_robot2/share/hiep_robot2/urdf/mech/: mecanum_wheel.urdf.xacro
install/hiep_robot2/share/hiep_robot2/urdf/robots/: robot_3d.urdf.xacro
install/mec_mobile/share/mec_mobile/: local_setup.sh  package.sh
install/mec_mobile_description/share/mec_mobile_description/: local_setup.sh  package.sh  package.xml
install/mec_mobile_gazebo/share/mec_mobile_gazebo/: local_setup.sh  package.sh
install/mec_mobile_gazebo/share/mec_mobile_gazebo/launch/: world.launch.py
install/mec_mobile_gazebo/share/mec_mobile_gazebo/worlds/: world.sdf
install/mec_mobile_navigation/share/mec_mobile_navigation/: package.sh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: package.sh
log/: latest_build  latest_list
src/hiep_robot2/: CMakeLists.txt  setup.cfg  setup.py
src/hiep_robot2/config/: slam_toolbox_mapping.yaml
src/hiep_robot2/esp32_arduino_comm/esp32_comm_ver1/: esp32_comm_ver1.ino
src/hiep_robot2/esp32_arduino_comm/esp32_comm_ver2/: esp32_comm_ver2.ino
src/hiep_robot2/hiep_robot2/: odometry_publisher.py  serial_comm_node.py
src/hiep_robot2/launch/: lidar_launch.py  mapping_launch.py  robot_launch.py  serial_comm_launch.py
src/hiep_robot2/urdf/robots/: robot_3d.urdf.xacro
